# chorus_code

./: README.md  agent.py  blackboard.py  filelock.py  init_tui.py  models.py  monitor.py  pyproject.toml  swarm.py  test_core.py  worktree.py
chorus_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
roles/: cooperative.yaml  definitions.yaml  swarm.yaml
templates/: claude_md.j2
